--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
       <h1>張榮凱</h1>
       <p>我是個 <span class="typed" data-typed-items="後端工程師, 專案負責人, 程式開發者, 資料庫管理員"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/castion2293" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://gitlab.com/castion2293" target="_blank" class="gitlab"><i class="bx bxl-gitlab"></i></a>
+        <a href="https://castion2293.medium.com/" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -84,7 +82,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/DSC_0290.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
@@ -701,14 +699,12 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
+      <h3>Nick Zhang</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/castion2293" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://gitlab.com/castion2293" target="_blank" class="gitlab"><i class="bx bxl-gitlab"></i></a>
+        <a href="https://castion2293.medium.com/" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
@@ -718,7 +714,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="#">Nick Zhang</a>
       </div>
     </div>
   </footer><!-- End Footer -->
