fix: 增加經驗頁(@nick)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>主頁</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>關於我</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bxs-wrench"></i> <span>技能</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>經歷</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -106,7 +106,7 @@
               </div>
             </div>
             <p class="p-3">
-              目前在一家遊戲開發公司當任後端開發部門主管，專案開發負責人及資料庫維護管理者，代理團隊人數約5人，程式開發經驗已經超過5年以上
+              目前在一家遊戲開發公司當任後端開發部門主管，專案開發負責人及資料庫維護管理者，帶領團隊人數約5人，程式開發經驗已經超過5年以上
             </p>
           </div>
         </div>
@@ -221,6 +221,12 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">GCP <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
           </div>
 
@@ -273,6 +279,12 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">AWS <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
           </div>
 
@@ -286,59 +298,79 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>經歷</h2>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h3 class="resume-title">工作經歷</h3>
+            <div class="resume-item">
+              <h4>後端部門主管</h4>
+              <h5>2020 - 現在</h5>
+              <p><em>雍海科技, 台中</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>後端部門負責人</li>
+                <li>管理後端團隊 人數5人</li>
+                <li>專案開發與決策設計負責人</li>
+                <li>PHP後端程式開發 / gitlab CI/CD 自動化部屬 / GCP雲端主機架設 </li>
+                <li>例行維護工作與新功能添加 </li>
+              </ul>
+              <p><em>實務經驗</em></p>
+              <ul>
+                <li>資料庫讀寫分離(MySQL)，並使用索引優化百萬級別的大表</li>
+                <li>NoSQL應用(使用MongoDB)</li>
+                <li>為舊有專案翻修Lagacy Code並補上單元測試及應用端的效能改善</li>
               </ul>
             </div>
-
-            <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>後端工程師</h4>
+              <h5>2017 - 2020</h5>
+              <p><em>儁上科技, 台中</em></p>
+              <ul>
+                <li>開發遊戲平台及後台管理系統(Laravel框架)</li>
+                <li>功能模組抽離 / 第三方API串接 / 微服務導向設計</li>
+                <li>舊專案重構及測試撰寫</li>
+                <li>舊專案重構及測試撰寫</li>
+              </ul>
+              <p><em>實務經驗</em></p>
+              <ul>
+                <li>大型遊戲前台及後台開發，可供上萬會員使用</li>
+                <li>遊戲功能模組獨立成分散式架構，供第三方客戶串接更加方便</li>
+              </ul>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>技術服務工程師</h4>
+              <h5>2015 - 2016</h5>
+              <p><em>羅博特科技, 台中</em></p>
+              <ul>
+                <li>協助客戶導入機械手臂自動化並做問題排除</li>
+                <li>反應客戶問題並以英文與原廠溝通</li>
+              </ul>
+              <p><em>實務經驗</em></p>
+              <ul>
+                <li>PC base與Robot系統整合</li>
+                <li>Robot與視覺整合及動態追片</li>
+                <li>4軸及6軸Robot自動化應用</li>
+              </ul>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">學歷</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>電腦科學</h4>
+              <h5>2016 - 2017</h5>
+              <p><em>LDS Business College, Salt Lake City, UT</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>設計線上點餐系統 並以此作品參加校內創業競賽</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>機械工程</h4>
+              <h5>2006 - 2010</h5>
+              <p><em>中興大學, 台中</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>C語言撰寫OpenCV影像處理</li>
+                <li>專題競賽全系第三名</li>
               </ul>
             </div>
           </div>
