fix: 增肌index_en page(@nick)

--- a/index_en.html
+++ b/index_en.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>履歷</title>
+  <title>Resume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,20 +41,20 @@
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-  <a href="./index_en.html" class="github"><i class="fas fa-language translation-nav-toggle"></i></a>
+  <a href="./index.html" class="github"><i class="fas fa-language translation-nav-toggle"></i></a>
   
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>主頁</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>關於我</span></a></li>
-        <li><a href="#skills" class="nav-link scrollto"><i class="bx bxs-wrench"></i> <span>技能</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>經歷</span></a></li>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="bx bxs-wrench"></i> <span>Skill</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experience</span></a></li>
 <!--        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>作品</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>與我聯絡</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Project</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -63,8 +63,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>張榮凱</h1>
-      <p>我是個 <span class="typed" data-typed-items="後端工程師, 專案負責人, 程式開發者, 資料庫管理員"></span></p>
+      <h1>Nick Zhang</h1>
+      <p>I'm <span class="typed" data-typed-items="Backend Developer, Project Manager, Programmer, Database Administer"></span></p>
       <div class="social-links">
         <a href="https://github.com/castion2293" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://gitlab.com/castion2293" target="_blank" class="gitlab"><i class="bx bxl-gitlab"></i></a>
@@ -81,7 +81,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>關於我</h2>
+          <h2>About</h2>
           <div class="d-none d-md-block">
             <p>我是一名喜歡研究程式開發的工程師，擅長後端的開發處理，主要是PHP語言，Laravel架構為主，資料庫的架構設計</p>
             <p>對於linux系統，docker容器，vue前端開發，分散式架構及Python爬蟲也有涉獵一些</p>
@@ -177,7 +177,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>技能</h2>
+          <h2>Skill</h2>
         </div>
 
         <div class="row skills-content">
@@ -308,7 +308,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>經歷</h2>
+          <h2>Experience</h2>
         </div>
 
         <div class="row">
@@ -546,7 +546,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>作品</h2>
+          <h2>Project</h2>
         </div>
 
         <h3>套件開發</h3>
@@ -802,7 +802,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>與我聯絡</h2>
+          <h2>Contact</h2>
         </div>
 
         <div class="row">
