fix: 完成英文履歷(@nick)

--- a/index_en.html
+++ b/index_en.html
@@ -905,7 +905,7 @@
 <footer id="footer">
 	<div class="container">
 		<h3>Nick Zhang</h3>
-		<p>希望我們可以有一個合作愉快的機會</p>
+		<p>Hope we have an opportunity to work together</p>
 		<div class="social-links">
 			<a href="https://github.com/castion2293" target="_blank" class="github"><i class="bx bxl-github"></i></a>
 			<a href="https://gitlab.com/castion2293" target="_blank" class="gitlab"><i class="bx bxl-gitlab"></i></a>
