--- a/index.html
+++ b/index.html
@@ -658,11 +658,11 @@
                 <div class="portfolio-description">
                   <div class="description-item">
                     <i class="bx bx-check-circle"></i>
-                    <span>課程排課、點名與成績管理</span>
+                    <span>串接 Google Gemini API</span>
                   </div>
                   <div class="description-item">
                     <i class="bx bx-check-circle"></i>
-                    <span>LINE Bot 提供即時家長查詢與通知功能</span>
+                    <span>Google extension 開發</span>
                   </div>
                 </div>
               </div>
@@ -685,11 +685,11 @@
                 <div class="portfolio-description">
                   <div class="description-item">
                     <i class="bx bx-check-circle"></i>
-                    <span>課程排課、點名與成績管理</span>
+                    <span>ChatGPT API 串接</span>
                   </div>
                   <div class="description-item">
                     <i class="bx bx-check-circle"></i>
-                    <span>LINE Bot 提供即時家長查詢與通知功能</span>
+                    <span>互動式對話視窗</span>
                   </div>
                 </div>
               </div>
